# BioSMOKE

./: .clang-format  .gitignore  BioSMOKEupdate.sln  CMakeLists.txt  CMakeSettings.json  README.md
BioSMOKEupdate/: AuxiliaryFunctions.h  AuxiliaryFunctions.hpp  BioSMOKE.cpp  BioSMOKEupdate.vcxproj  BioSMOKEupdate.vcxproj.filters  BiomassTemperature_Profile.hpp  createOutput.H  memoryAllocation.H
BioSMOKEupdate/hpp/: ._Grammar_TGA_Biomass.h  Grammar_GasStatus_Biomass.h  Grammar_SolidStatus_Biomass.h  Grammar_TotalSimulation_Biomass.h  Grammar_biomass.h
MSVS19/: BioSMOKE.sln  BioSMOKE.vcxproj  BioSMOKE.vcxproj.filters
cmake/: CompilerOptions.cmake  CppCheck.cmake  GTest.cmake  InstallationOptions.cmake  Options.cmake
examples/Particle/: input.dic
examples/TGA/: input.dic
examples/kinetics/Polimi_2003/: BIO_2003.gas
examples/kinetics/Polimi_2407/: kinetics.gas  kinetics.solid  thermo.tdc  transport.tra
source/: BioSMOKE.cpp  BioSMOKE.h  BiomassTemperature_Profile.h  CMakeLists.txt  OpenSMOKE_ODESystem_Interface.h  createOutput.H
source/grammar/: Grammar_BioSMOKE.h  Grammar_SolidStatus.h  Grammar_TGA_Biomass.h  Grammar_TotalSimulation_Biomass.h
source/hpp/: Grammar_GasStatus_Biomass.h  Grammar_TGA_Biomass.h  Grammar_biomass.h
